--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,6 @@
 	<name>springdemo Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
-		<mybatis.version>3.3.0</mybatis.version>
-		<mybatis-spring.version>1.2.3</mybatis-spring.version>
 		<spring.version>4.2.3.RELEASE</spring.version>
 		<shiro.version>1.2.4</shiro.version>
 	</properties>
@@ -85,6 +83,23 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>4.0.0-b01</version>
+		</dependency>
+		<!-- 文件上传 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<!-- mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.3.0</version>
 		</dependency>
 		<!-- DBCP -->
 		<dependency>
