解决mvn打包时不打包mapper.xml文件

--- a/pom.xml
+++ b/pom.xml
@@ -158,5 +158,26 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<!-- 解决mvn打包时不打包mapper.xml文件 -->
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+					<include>**/*.tld</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+					<include>**/*.tld</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 	</build>
 </project>
