--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<properties>
 		<spring.version>4.2.3.RELEASE</spring.version>
 		<shiro.version>1.2.4</shiro.version>
-		<spring.security>3.2.0.RELEASE</spring.security>
+		<spring.security>4.1.1.RELEASE</spring.security>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -101,6 +101,11 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.security}</version>
 		</dependency>
 		<!-- 文件上传 -->
