--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,17 @@
 			<artifactId>xstream</artifactId>
 			<version>1.2.2</version>
 		</dependency>
-
+		<!-- 文件在线预览 -->
+		<dependency>
+			<groupId>fakepath</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.zhuozhengsoft</groupId>
+			<artifactId>pageoffice</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
