--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,12 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<!--1.freemarker -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.25-incubating</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>springdemo</finalName>
